--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@material-ui/icons": "^3.0.1",
     "firebase": "^7.20.0",
     "query-string": "^6.1.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.3",
     "react-with-firebase-auth": "^1.3.2",
+    "reactfire": "^2.0.0-alpha.3",
     "redux": "^4.0.0"
   },
   "scripts": {
