--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.1.1",
     "@material-ui/icons": "^3.0.1",
+    "emailjs-com": "^2.6.3",
     "firebase": "^7.20.0",
     "query-string": "^6.1.0",
     "react": "16.8.0",
