--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "query-string": "^6.1.0",
     "react": "16.8.0",
     "react-dom": "16.8.0",
+    "react-modal": "^3.11.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.3",
